--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -18,10 +18,11 @@
         <!-- 图片裁剪区域 -->
         <div class="cropper-box">
           <!-- 这个 img 标签很重要，将来会把它初始化为裁剪区域 -->
-          <img id="image" src="../images/sample.jpg" />
+          <img id="image"/>
         </div>
         <!-- 图片的预览区域 -->
         <div class="preview-box">
+          <img src="" alt="">
           <div>
             <!-- 宽高为 100px 的预览区域 -->
             <div class="img-preview w100"></div>
